--- a/public/src/layouts/editor-area.html
+++ b/public/src/layouts/editor-area.html
@@ -9,6 +9,10 @@
         <span class="icon icon-white icon-plus"></span>
         Events
       </a></li>
+      <li class="butter-editor-header-li"><a class="butter-btn butter-editor-header-chapter">
+        <span class="icon icon-white icon-plus"></span>
+        Chapter
+      </a></li>
       <li class="butter-editor-header-li"><a class="butter-btn butter-editor-header-share">
         <span class="icon icon-white icon-edit"></span>
         Project
