--- a/public/templates/basic/index.html
+++ b/public/templates/basic/index.html
@@ -15,8 +15,11 @@
   <link rel="stylesheet" href="../assets/plugins/twitter/popcorn.twitter.css">
   <link rel="stylesheet" href="../assets/plugins/text/popcorn.text.css">
   <link rel="stylesheet" href="../assets/plugins/wikipedia/popcorn.wikipedia.css">
+  <link rel="stylesheet" href="../assets/plugins/chapter/popcorn.chapter.css">
+  <link rel="stylesheet" href="../assets/plugins/toc/popcorn.toc.css">
 
   <link href="https://mozorg.cdn.mozilla.net/media/css/tabzilla-min.css" rel="stylesheet" data-butter-exclude>
+  <link rel="stylesheet" href="nestable.css" data-butter-exclude>
 
   <script src="../../src/butter.js" data-butter-exclude></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" data-butter-exclude></script>
@@ -29,7 +32,11 @@
   <script src="../assets/editors/googlemap.js" data-butter-exclude></script>
   <script src="../assets/editors/twitter/twitter.js" data-butter-exclude></script>
   <script src="../assets/editors/sequencer/sequencer.js" data-butter-exclude></script>
+  <script src="../assets/editors/chapter/chapter.js" data-butter-exclude></script>
+  <script src="../assets/editors/toc/toc.js" data-butter-exclude></script>
   <script src="template.js" data-butter-exclude></script>
+  <script src="jquery.nestable.js" data-butter-exclude></script>
+  
   <script type="text/javascript">
     var _gaq = _gaq || [];
     _gaq.push(['_setAccount', 'UA-35433268-12']);
