Fixed bug on chapter trackevent dragndrop behavior. Added features to chapter plugin to display of the chapter title on play.

--- a/public/css/tray-timeline.less
+++ b/public/css/tray-timeline.less
@@ -262,7 +262,7 @@
   border: 1px solid #424242;
   border-bottom-color: lighten( #424242, 7% );
   .title {
-    font-weight: normal;
+    font-weight: bold;
     color: #FFF;
 
     /*&:before {
