Fixed toc display on export.

--- a/public/templates/basic/index.html
+++ b/public/templates/basic/index.html
@@ -36,6 +36,12 @@
   <script src="../assets/editors/toc/toc.js" data-butter-exclude></script>
   <script src="template.js" data-butter-exclude></script>
   <script src="jquery.nestable.js" data-butter-exclude></script>
+
+  <script src="../../external/jsonml/jsonml-html.js" data-butter-exclude></script>
+  <script src="../../external/jsonml/jsonml-dom.js" data-butter-exclude></script>
+
+  <script src="/external/jsonml/jsonml-html.js"></script>
+  <script src="/external/jsonml/jsonml-dom.js"></script>
   
   <script type="text/javascript">
     var _gaq = _gaq || [];
