Removed need for Persona auth for saving a Popcorn maker project.

--- a/public/src/layouts/header.html
+++ b/public/src/layouts/header.html
@@ -1,6 +1,6 @@
 <div class="butter-header" data-butter-exclude>
-  <nav id="webmaker-nav"></nav>
-  <a href="http://www.mozilla.org/" id="tabzilla">mozilla</a>
+  <!--nav id="webmaker-nav"></nav>
+  <a href="http://www.mozilla.org/" id="tabzilla">mozilla</a-->
   <header class="butter-header-primary">
     <div class="butter-logo"></div>
     <ul class="butter-nav">
@@ -9,7 +9,7 @@
        <a class="butter-project-name">My Cool Remix</a><i class="icon icon-pencil"></i>
       </li>
       <li>
-        <a class="butter-btn btn-green butter-save-btn butter-disabled">Sign in to save</a>
+        <a class="butter-btn btn-green butter-save-btn butter-disabled">Save</a>
         <div class="butter-btn-menu-container butter-project-menu">
           <a class="butter-btn btn-light butter-project-menu-control butter-btn-menu-control"><span class="icon icon-only icon-cog"></span></a>
           <ul class="butter-btn-menu">
