--- a/public/css/tray-timeline.less
+++ b/public/css/tray-timeline.less
@@ -258,9 +258,10 @@
 }
 
 .butter-track-event[data-butter-trackevent-type="chapter"] {
-  background: #424242;
-  border: 1px solid #424242;
-  border-bottom-color: lighten( #424242, 7% );
+  background: #3FB58E;
+  border: 1px solid #3FB58E;
+  border-right-color: lighten( #3FB58E, 7% );
+  border-bottom-color: lighten( #3FB58E, 7% );
   .title {
     font-weight: bold;
     color: #FFF;
@@ -281,7 +282,7 @@
     background-image: url( ../resources/icons/chapter-white.png ) !important;
   }
   .handle {
-    background: #424242;
+    background: #3FB58E;
   }
 }
 
