Added style improvements.

--- a/public/css/tray-timeline.less
+++ b/public/css/tray-timeline.less
@@ -282,7 +282,7 @@
     background-image: url( ../resources/icons/chapter-white.png ) !important;
   }
   .handle {
-    background: #3FB58E;
+    background: #FFF;
   }
 }
 
