Fixed 'Add all' feature bugs against modification.

--- a/public/css/media-editor.less
+++ b/public/css/media-editor.less
@@ -82,13 +82,18 @@
       border: 0 solid @baseLightOutline;
       border-bottom-width: 1px;
       border-top-width: 1px;
-      font-size: 11px;
+      font-size: 14px;
       font-weight: 700;
-      text-transform: uppercase;
+      /*text-transform: uppercase;*/
       position: absolute;
       top: 0;
       left: 0;
       right: 0;
+    }
+    .add-all-btn {
+      position: absolute;
+      top: 6px;
+      right: 20px;
     }
   }
 
@@ -120,7 +125,7 @@
 
   .media-gallery-scroll-container {
     position: absolute;
-    top: 46px;
+    top: 49px;
     left: 0;
     right: 0;
     bottom: 0;
