--- a/public/src/layouts/media-editor.html
+++ b/public/src/layouts/media-editor.html
@@ -25,7 +25,7 @@
       <div class="media-gallery-heading">
         Media Gallery 
       
-      <a class="butter-btn btn-light btn-green add-all-btn" target="_blank"><span class="icon icon-plus"></span>Add all</a>
+      <a class="butter-btn btn-light btn-green add-all-btn" target="_blank"><span class="icon icon-white icon-plus"></span>Add all</a>
       </div>
       <div class="media-gallery-scroll-container scrollbar-container">
         <ul class="media-gallery-list scrollbar-outer scrollbar-inner"></ul>
