Modifications of style.

--- a/public/src/layouts/media-editor.html
+++ b/public/src/layouts/media-editor.html
@@ -10,7 +10,8 @@
             <span class="media-icon soundcloud-icon"></span>
             <span class="media-icon html5-icon"></span>
           </span>
-          Paste a link from YouTube, SoundCloud, Vimeo or an HTML5 video
+          Paste a link from YouTube, SoundCloud, Vimeo or an HTML5 video.
+          Optionally, you can add several URLs splitted by space or cariage return.
         </p>
         <textarea class="add-media-input" placeholder="Paste an HTML5, YouTube, Vimeo, or SoundCloud link here"></textarea>
         <span class="butter-btn-slide-out">
