Added asynchronous loading of several media

--- a/public/css/media-editor.less
+++ b/public/css/media-editor.less
@@ -265,6 +265,13 @@
     }
   }
 
+  .media-valid-message {
+    color: @green;
+    &.hidden {
+      display: none;
+    }
+  }
+
   .media-loading-spinner {
     float: left;
     margin-right: 10px;
