--- a/public/src/layouts/media-editor.html
+++ b/public/src/layouts/media-editor.html
@@ -18,6 +18,7 @@
           <a class="add-media-btn butter-btn btn-green hidden">Create clip</a>
           <span class="media-loading-spinner butter-spinner hidden" ></span>
           <label class="media-error-message hidden"></label>
+          <label class="media-valid-message hidden"></label>
         </span>
       </div>
     </fieldset>
