--- a/public/css/media-editor.less
+++ b/public/css/media-editor.less
@@ -22,8 +22,8 @@
     line-height: @titleBarHeight;
     text-transform: none;
     font-weight: normal;
-    color: #555;
-    font-size: 14px;
+    /*color: #555;
+    font-size: 14px;*/
     &:before {
       content: "";
       background: url( "../resources/icons/media.png" ) no-repeat;
