--- a/public/css/dialog.less
+++ b/public/css/dialog.less
@@ -98,10 +98,10 @@
     }
   }
   .butter-logo {
-    position: absolute;
+    /*position: absolute;
     top: -35px;
     left: -25px;
-    width: 50px;
+    width: 50px;*/
   }
   .butter-form {
     padding: 8px 0;
@@ -127,8 +127,8 @@
   }
   .butter-btn {
     font-weight: 700;
-    font-size: 11px;
-    text-transform: uppercase;
+    font-size: 12px;
+    /*text-transform: uppercase;*/
   }
 }
 
@@ -172,21 +172,21 @@
 .butter-first-run-dialog {
   position: fixed;
   right: 360px;
-  top: 188px;
+  top: 130px;
   -moz-animation: bounce ease 1s;
   -webkit-animation: bounce ease 1s;
   -o-animation: bounce ease 1s;
   animation: bounce ease 1s;
 
   h2 {
-    font-size: 1.2em;
+    font-size: 1.1em;
     margin: 0;
     margin-left: 10px;
     font-weight: 400;
   }
   .butter-logo {
-    top: 50%;
-    margin-top: -40px;
+    position: relative;
+    margin-top: 10px;
   }
 
   .triangle( "right", 20px, @baseLight, 1px, #CCC );
@@ -200,13 +200,112 @@
   width: 400px;
 }
 
+
+/*********************************************************
+* Tutorial
+*/
+
+.tutorial {
+  .overlay-highlight {
+    z-index: @MODAL_Z_INDEX + 1;
+  }
+
+  .butter-modal-container {
+    position: relative;
+    z-index: @MODAL_Z_INDEX + 1;
+  }
+}
+
+.butter-tutorial-dialog {
+  position: fixed;
+  left: 50px;
+  top: 50px;
+  -moz-animation: bounce ease 1s;
+  -webkit-animation: bounce ease 1s;
+  -o-animation: bounce ease 1s;
+  animation: bounce ease 1s;
+
+  border: 1px solid #CCC;
+
+  h2 {
+    font-size: 1.1em;
+    margin: 0;
+    margin-left: 0px;
+    font-weight: 400;
+  }
+  .butter-logo {
+    position: relative;
+    /*top: 30px;
+    left: 50%;*/
+    margin-top: 10px;
+  }
+
+  /*.triangle( "right", 20px, @baseLight, 1px, #CCC );*/
+
+  .butter-dialog-title {
+    padding: 10px 0 10px 50px;
+  }
+  p {
+  }
+  strong {
+    color: rgb(85, 85, 85);
+  }
+
+  .butter-btn {
+    float: right;
+    margin-bottom: 20px;
+  }
+}
+
+.tutorial.tooltip-on {
+  background: #F8EDAB;
+  font-size: 11pt;
+  &:after {
+    border-bottom-color: #F8EDAB;
+  }
+}
+
+
+/*.tutorial-intro {
+}
+
+.tutorial-parts {
+
+}
+
+.tutorial-controls {
+
+}
+
+.tutorial-panel {
+
+}
+
+.tutorial-timeline {
+  .butter-tutorial-dialog {
+    right: 360px;
+    bottom: 220px;
+  }
+}
+
+.tutorial-viewer {
+  .butter-tutorial-dialog {
+    right: 360px;
+    bottom: 220px;
+  }
+
+}*/
+
+
+
+
+
 .overlay-highlight {
   z-index: @MODAL_Z_INDEX + 1;
   position: relative;
 }
 
-.butter-tooltip.tooltip-popup,
-.butter-tooltip.tooltip-media {
+.butter-tooltip {
   h3 {
     margin: 0 0 5px 0;
     font-style: normal;
@@ -218,6 +317,7 @@
 .butter-tooltip.tooltip-popup.tooltip-on,
 .butter-tooltip.tooltip-media.tooltip-on {
   background: #F8EDAB;
+  font-size: 11pt;
   &:after {
     border-bottom-color: #F8EDAB;
   }
@@ -236,25 +336,25 @@
 }
 
 @-moz-keyframes bounce {
-  0% { right: 360px; }
-  50% { right: 345px; }
-  100% { right: 360px; }
+  0% { left: 50px; }
+  50% { left: 65px; }
+  100% { left: 50px; }
 }
 
 @-webkit-keyframes bounce {
-  0% { right: 360px; }
-  50% { right: 345px; }
-  100% { right: 360px; }
+  0% { left: 50px; }
+  50% { left: 65px; }
+  100% { left: 50px; }
 }
 
 @-o-keyframes bounce {
-  0% { right: 360px; }
-  50% { right: 345px; }
-  100% { right: 360px; }
+  0% { left: 50px; }
+  50% { left: 65px; }
+  100% { left: 50px; }
 }
 
 @keyframes bounce {
-  0% { right: 360px; }
-  50% { right: 345px; }
-  100% { right: 360px; }
+  0% { left: 50px; }
+  50% { left: 65px; }
+  100% { left: 50px; }
 }
