--- a/public/src/layouts/header.html
+++ b/public/src/layouts/header.html
@@ -9,7 +9,7 @@
        <a class="butter-project-name">My Cool Remix</a><i class="icon icon-pencil"></i>
       </li>
       <li>
-        <a class="butter-btn btn-green butter-save-btn butter-disabled">Save</a>
+        <a class="butter-btn btn-green butter-save-btn butter-disabled">Sauvegarder</a>
         <div class="butter-btn-menu-container butter-project-menu">
           <a class="butter-btn btn-light butter-project-menu-control butter-btn-menu-control"><span class="icon icon-only icon-cog"></span></a>
           <ul class="butter-btn-menu">
