--- a/public/src/layouts/media-editor.html
+++ b/public/src/layouts/media-editor.html
@@ -1,5 +1,5 @@
 <div class="media-editor butter-editor fadable alternates-hidden allow-scrollbar">
-  <h1 class="add-new-media">Create new media clip</h1>
+  <h1 class="add-new-media">Importation de médias</h1>
   <div class="butter-editor-body">
     <fieldset class="add-media-panel">
       <div class="media-editor-inner-wrapper primary-media-wrapper">
@@ -10,12 +10,12 @@
             <span class="media-icon soundcloud-icon"></span>
             <span class="media-icon html5-icon"></span>
           </span>
-          Paste a link from YouTube, SoundCloud, Vimeo or an HTML5 video.
-          Optionally, you can add several URLs splitted by space or cariage return.
+          Collez un lien de YouTube, SoundCloud, Vimeo ou une vidéo HTML5.
+          Vous pouvez coller plusieurs liens séparés par un espace ou un retour à la ligne.
         </p>
         <textarea class="add-media-input" placeholder="Paste an HTML5, YouTube, Vimeo, or SoundCloud link here"></textarea>
         <span class="butter-btn-slide-out">
-          <a class="add-media-btn butter-btn btn-green hidden">Create clip</a>
+          <a class="add-media-btn butter-btn btn-green hidden">Importer</a>
           <span class="media-loading-spinner butter-spinner hidden" ></span>
           <label class="media-error-message hidden"></label>
           <label class="media-valid-message hidden"></label>
@@ -24,10 +24,8 @@
     </fieldset>
 
     <div class="media-gallery">
-      <div class="media-gallery-heading">
-        Media Gallery 
-      
-      <a class="butter-btn btn-light btn-green add-all-btn" target="_blank"><span class="icon icon-white icon-plus"></span>Add all</a>
+      <div class="media-gallery-heading">Galerie de médias
+      <a class="butter-btn btn-light btn-green add-all-btn" target="_blank"><span class="icon icon-white icon-plus"></span>Ajouter tout</a>
       </div>
       <div class="media-gallery-scroll-container scrollbar-container">
         <ul class="media-gallery-list scrollbar-outer scrollbar-inner"></ul>
