Fixes on tutorial feature to support tooltips.

--- a/public/css/dialog.less
+++ b/public/css/dialog.less
@@ -314,10 +314,10 @@
   }
 }
 
-.butter-tooltip.tooltip-popup.tooltip-on,
-.butter-tooltip.tooltip-media.tooltip-on {
+.butter-tooltip.tooltip-on,
+.butter-tooltip.tooltip-on {
   background: #F8EDAB;
-  font-size: 11pt;
+  font-size: 10pt;
   &:after {
     border-bottom-color: #F8EDAB;
   }
