--- a/views/embed.jade
+++ b/views/embed.jade
@@ -92,17 +92,11 @@ html(lang='en')
                     span.icon
                     span.size X-Large
                     span.dimensions 1280x763
-    //#attribution-info.attribution-info
-    //  #attribution-logo.attribution-logo
-    //    span.attribution-text Credits
-    //  #attribution-details.attribution-details
-    //    span.attribution-close
-    //    div.attribution-mopop mozilla Popcorn
-    //    div.attribution-title #{title}
-    //   if author
-    //      div.attribution-author #{author}
-    //    div.attribution-media
-    //      span.media-icon
-    //      a.attribution-media-src(href='#{mediaSrc}', target='_blank') #{mediaSrc}
-    //    div.attribution-extra
+    #attribution-info.attribution-info
+      #attribution-logo.attribution-logo
+        span.attribution-text Sommaire
+      #attribution-details.attribution-details
+        //span.attribution-close
+        div.attribution-title #{title}
+        div.attribution-content
     #controls.controls
