--- a/public/css/controls.css
+++ b/public/css/controls.css
@@ -11,7 +11,7 @@
   height: 41px;
   visibility: visible;
   opacity: 1;
-  z-index: 2;
+  z-index: 4;
 }
 
 .controls-hide {
@@ -25,6 +25,7 @@
   width: 100%;
   display: block;
   background:white;
+  z-index: 4;
 }
 
 /* Big Button */
@@ -64,15 +65,15 @@
 .controls-left {
   height: 22px;
   position: absolute;
-  width: 35px;
+  width: 115px;
 }
 
 .controls-middle {
   margin-top: 0;
   height: 41px;
   position: absolute;
-  left: 185px;
-  right: 215px;
+  left: 215px;
+  right: 175px;
   padding-right: 20px;
   border-right: 1px solid #d5d6d5;
 }
@@ -82,37 +83,70 @@
   height: 41px;
   position: absolute;
   width: 108px;
-  right: 45px;
+  right: 0;
   background: #f2f2f2;
-  border-right: 1px solid #d5d6d5;
   border-left: 1px solid #d5d6d5;
+}
+
+#controls-bars {
+  width: inherit;
+  height: inherit;
+}
+
+#controls-tocbar {
+  position: absolute;
+  background: #fff;
+  height: 10px;
+  left: 0;
+  right: 0;
+  top: 9px;
+  margin-right: 12px;
+  border-radius: 0;
+  box-shadow: none;
+  cursor: pointer;
+  border-radius: 0px;
+}
+
+.controls-tocbar-item {
+  background: #9EAFBA;
+  height: 10px;
+  float: left;
+}
+
+.even {
+  opacity: 0.8;
+}
+
+.odd {
+  opacity: 0.4;
 }
 
 #controls-timebar {
   position: absolute;
   background: #e4e4e4;
-  height: 15px;
+  height: 10px;
   left: 0;
   right: 0;
-  top: 12px;
+  top: 20px;
   margin-right: 12px;
   border-radius: 0;
   box-shadow: none;
   cursor: pointer;
+  border-radius: 0px;
 }
 
 #controls-progressbar {
   height: 100%;
   background: #1eb771;
   position: absolute;
-  border-radius: 0;
+  border-radius: 0px;
 }
 
 /* Time */
 
 .time {
   position: absolute;
-  left: 43px;
+  left: 113px;
   height: 27px;
   background: url( "../resources/controls/controls_time_arrowL.gif" ) no-repeat left top, url( "../resources/controls/controls_time_arrowR.gif" ) right top no-repeat;
   background-color: #f2f2f2;
@@ -148,27 +182,28 @@
 
 #controls-volume-container {
   position: absolute;
-  right: 165px;
+  right: 122px;
   width: 38px;
 }
 
 #controls-volume {
   position: absolute;
   background: #e4e4e4;
-  height: 15px;
+  height: 18px;
   left: 7px;
   right: 0;
-  top: 12px;
+  top: 11px;
   border-radius: 0;
   box-shadow: none;
   cursor: pointer;
+  border-radius: 0px;
 }
 
 #controls-volume-progressbar {
   height: 100%;
   background: #1eb771;
   position: absolute;
-  border-radius: 0;
+  border-radius: 0px;
 }
 
 #controls-volume-scrubber {
@@ -207,6 +242,34 @@
   background-color: #60c7a5;
 }
 
+#controls-prev,
+#controls-next {
+  width: 28px;
+  height: 28px;
+  background: #1eb771 url( "../resources/controls/controls_icon_playPause.png" ) no-repeat;
+  padding: 0;
+  border-radius: 3px;
+  margin-top: 7px;
+  margin-left: 7px;
+  cursor: pointer;
+  float: left;
+}
+
+#controls-prev {
+  left: 35px;
+  background-position: center -41px !important;
+}
+
+#controls-next {
+  left: 70px;
+  background-position: center -67px !important;
+}
+
+#controls-prev:hover,
+#controls-next:hover {
+  background-color: #60c7a5;
+}
+
 #controls-mute {
   width: 14px;
   height: 14px;
@@ -224,11 +287,11 @@
 }
 
 .controls-playing {
-  background-position: center -15px !important;
+  background-position: 10px -15px !important;
 }
 
 .controls-paused {
-  background-position: center 10px !important;
+  background-position: 10px 10px !important;
 
 }
 
@@ -264,6 +327,11 @@
 }
 
 #controls-fullscreen {
+  background-position: 7px -2px;
+}
+
+
+#controls-toc {
   background-position: 7px -2px;
 }
 
