--- a/public/templates/assets/plugins/toc/popcorn.toc.css
+++ b/public/templates/assets/plugins/toc/popcorn.toc.css
@@ -1,4 +1,4 @@
-.popcorn-text {
+.popcorn-toc {
   color: #FFF;
   font-size: 22.5em;
 }
@@ -7,13 +7,13 @@
   visibility: hidden;
 }
 
-.text-inner-div a {
+.toc-inner-div a {
   text-decoration: none;
-  color: #000;
+  color: rgba(0, 0, 0, .6);
   opacity: 0.6;
-
+  font-family: "Helvetiva Neue", sans-serif;
 }
-.text-inner-div a:after {
+/*.text-inner-div a:after {
   content: "";
   display: inline-block;
   opacity: 0.6;
@@ -21,12 +21,12 @@
   background-image: url( "../../../../resources/icons/glyphiconshalflings-green.png" );
   width: 14px;
   height: 14px;
-}
-.text-inner-div a:hover {
+}*/
+.toc-inner-div a:hover {
   text-decoration: underline;
   opacity: 0.8;
 }
-.text-inner-div a:hover:after {
+.toc-inner-div a:hover:after {
   opacity: 1;
 }
 
@@ -96,12 +96,35 @@
   outline: none;
 }
 
-.toc-list {
-  list-style: none;
-  margin: 5%;
+/*ul.toc-list {
+  list-style-type:none;
+  margin: 0;
   padding: 0;
+  overflow:hidden;
 }
 
-.toc-list li {
-  margin-bottom: 5%;
+ul.toc-list li {
+  float:left;
 }
+
+ul.toc-list li a
+{
+  display: block;
+  width: 100%;
+}
+
+ul.toc-list li a:link,
+ul.toc-list li a:visited
+{
+  display: block;
+  font-weight: bold;
+  color: #FFFFFF;
+  background-color: #98bf21;
+  text-align:center;
+  text-decoration: none;
+}
+ul.toc-list li a:hover,
+ul.toc-list li a:active
+{
+  background-color:#7A991A;
+}*/
