--- a/public/templates/basic/index.html
+++ b/public/templates/basic/index.html
@@ -21,8 +21,6 @@
   <link href="https://mozorg.cdn.mozilla.net/media/css/tabzilla-min.css" rel="stylesheet" data-butter-exclude>
   <link rel="stylesheet" href="nestable.css" data-butter-exclude>
 
-  <!--link href="../../external/jquery-xbreadcrumbs/xbreadcrumbs.css" rel="stylesheet" data-butter-exclude-->
-
   <script src="../../src/butter.js" data-butter-exclude></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
@@ -42,13 +40,7 @@
   <script src="../../external/jsonml/jsonml-html.js" data-butter-exclude></script>
   <script src="../../external/jsonml/jsonml-dom.js" data-butter-exclude></script>
 
-  <!--script src="../../external/jquery-jbreadcrumb/js/jquery.easing.1.3.js"></script>
-  <script src="../../external/jquery-jbreadcrumb/js/jquery.jBreadCrumb.1.1.js"></script-->
-
-  <script src="../../external/jsonml/jsonml-dom.js" data-butter-exclude></script>
-  <!--script src="../../external/jquery-xbreadcrumbs/xbreadcrumbs.js"></script-->
-
-  <!-- TODO: clean references for player -->
+  <!-- References for player -->
   <script src="/external/jsonml/jsonml-html.js"></script>
   <script src="/external/jsonml/jsonml-dom.js"></script>
   
