--- a/public/templates/basic/style.less
+++ b/public/templates/basic/style.less
@@ -169,3 +169,129 @@ body.editor-minimized .body-wrapper {
   width: 100%;
   overflow: hidden;
 }
+
+/*********************************************************
+* Tooltip
+*/
+
+* {
+  &:hover > .butter-tooltip:not(.tooltip-no-hover) {
+    opacity: 1;
+    visibility: visible;
+    .transition( opacity 0.3s ease 0.5s );
+  }
+}
+
+.butter-tooltip {
+  @_tooltipWidth: 110px;
+  &.tooltip-on {
+    opacity: 1;
+    visibility: visible;
+    .transition( opacity 0.3s ease 0.5s );
+  }
+  &.tooltip-off {
+    display: none;
+  }
+  &.tooltip-no-transition-on {
+    opacity: 1;
+    visibility: visible;
+  }
+  &.tooltip-error {
+    color: red;
+  }
+  visibility: hidden;
+  opacity: 0;
+
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-top: 0;
+  margin-left: -@_tooltipWidth / 2;
+  z-index: @MODAL_Z_INDEX;
+  width: @_tooltipWidth;
+  padding: 10px;
+  background: #4E555A;
+  text-shadow: none;
+  color: #FFF;
+  line-height: 15px;
+  font-size: 11px;
+  .box-sizing( border-box );
+  /*border-radius: 2px;*/
+  text-align: center;
+  border: 0;
+  box-shadow: 0 5px 6px -5px rgba( 0, 0, 0, .3 );
+  pointer-events: none;
+  .transition( opacity 0.3s ease 0 );
+
+  &:after,
+  &:before {
+    content: "";
+    position: absolute;
+    top: -5px;
+    left: 25px;
+    margin-left: -5px;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid #FFF;
+  }
+  &:after {
+    z-index: @MODAL_Z_INDEX + 1;
+  }
+  &:before {
+    top: -6px;
+    border-bottom: 5px solid #CCC;
+  }
+}
+
+.butter-no-top-margin {
+  margin-top: 0;
+}
+
+#controls-time-tooltip {
+  @_tooltipHeight: 32px;
+  width: inherit;
+  display: inline;
+  margin-top: 3px;
+  margin-left: -25px;
+  text-align: left;
+  /*padding: @_tooltipHeight / 3;*/
+  font-size: 12px;
+  font-weight: bold;
+  line-height: @_tooltipHeight / 3;
+  top: -( @_tooltipHeight + 4px );
+  height: @_tooltipHeight;
+  border-radius: 3px;
+  &.tooltip-on {
+    .transition( all 0.1s ease 0 );
+  }
+  &:after, &:before{
+    top: 100%;
+    border-bottom: none;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid;
+    border-top-color: #4E555A;
+  }
+  &:before {
+    top: 100%;
+    border-bottom: none;
+    border-top: 5px solid #4E555A;
+  }
+}
+
+.tooltip-time {
+  font-size: 12px;
+  font-weight: normal;
+  text-align: left;
+  margin-right: 10px;
+}
+
+.tooltip-h1 {
+  font-size: 14px;
+  text-align: left;
+  display: inline;
+  overflow: visible;
+  white-space:nowrap;
+}
