--- a/public/src/layouts/status-area.html
+++ b/public/src/layouts/status-area.html
@@ -1,5 +1,8 @@
 <div class="media-status-container">
   <div class="time-bar">
+    <div class="time-bar-toc-container">
+      <div class="time-bar-toc-tooltip butter-tooltip butter-time-tooltip"></div>
+    </div>
     <div class="time-bar-canvas-container">
       <canvas></canvas>
     </div>
