--- a/public/css/embed-shell.less
+++ b/public/css/embed-shell.less
@@ -14,7 +14,7 @@
 
 body {
   -webkit-font-smoothing: antialiased;
-  font-family: "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Helvetica Neue", sans-serif;
   padding: 0;
   margin: 0;
   background: #FFF;
