--- a/public/css/controls.css
+++ b/public/css/controls.css
@@ -111,14 +111,14 @@
 }
 
 .controls-tocbar-item-h1 {
-background: #000;
+background: #9EAFBA;
 height: 2px;
 top: -4px;
 opacity: 0.3;
 }
 
 .controls-tocbar-item-h2 {
-background: #000;
+background: #9EAFBA;
 height: 2px;
 top: -1px;
 opacity: 0.3;
