Added refinements to the player.

--- a/views/embed.jade
+++ b/views/embed.jade
@@ -28,50 +28,26 @@ html(lang='en')
         #video.video
       .loading-message
     #controls-big-play-button
-    #post-roll-container
-      #post-roll.embed-overlay
-        .post-roll-inner
-          a.embed-logo
-          .embed-project
-            div
-              .mozpopcorn Popcorn Maker
-              .embed-title #{title}
-              .embed-author #{author}
-            .post-roll-description
-              | #{description}
-              br
-              a(href='/', target='_blank') Create a project like this!
-            ul.embed-nav.post-roll-options
-              li
-                a#replay-post
-                  span Replay
-              li
-                a(href='#{remixUrl}', target='_blank')#remix-post
-                  span Remix
-              li
-                a#share-post
-                  span Share
     #share-container
       #share.embed-overlay
         .share-inner
           a#share-close X
-          a.embed-logo
+          a.embed-logo(href='http://www.openclassrooms.com')
           .embed-project
             div
-              .mozpopcorn Popcorn Maker
-              .embed-title #{title}
+              .embed-h1 #{title}
               .embed-author #{author}
           #share-options.share-options
             fieldset
               label URL
-              input#share-url.share-ul(type='url')
+              input#share-url.share-url(type='url')
               ul.embed-nav.share-buttons
                 li
                   a#replay-share(href='#') Twitter
                 li
                   a#share-share(href='#') Google+
             fieldset
-              label Embed
+              label Code
               textarea#share-iframe
                 iframe
               .share-size
@@ -92,6 +68,9 @@ html(lang='en')
                     span.icon
                     span.size X-Large
                     span.dimensions 1280x763
+            fieldset
+              label Crédits
+              div
     #attribution-info.attribution-info
       #attribution-logo.attribution-logo
       #attribution-details.attribution-details
