--- a/public/css/controls.css
+++ b/public/css/controls.css
@@ -72,8 +72,8 @@
   margin-top: 0;
   height: 41px;
   position: absolute;
-  left: 215px;
-  right: 175px;
+  left: 146px;
+  right: 180px;
   padding-right: 20px;
   border-right: 1px solid #d5d6d5;
 }
@@ -82,7 +82,7 @@
   padding-top: 0;
   height: 41px;
   position: absolute;
-  width: 108px;
+  width: 40px;
   right: 0;
   background: #f2f2f2;
   border-left: 1px solid #d5d6d5;
@@ -110,25 +110,24 @@
 .controls-tocbar-item {
 }
 
-.controls-tocbar-item-h1 {
+.controls-tocbar-item-top {
 background: #9EAFBA;
 height: 2px;
-top: -4px;
+top: -6px;
 opacity: 0.3;
 }
 
-.controls-tocbar-item-h2 {
+.controls-tocbar-item-middle {
 background: #9EAFBA;
 height: 2px;
-top: -1px;
+top: -3px;
 opacity: 0.3;
 }
 
-.controls-tocbar-item-h3 {
+.controls-tocbar-item-bottom {
 background: #9EAFBA;
-height: 8px;
-top: 2px;
-border-right: 1px solid #FFF;
+height: 10px;
+top: 0px;
 }
 
 
@@ -141,7 +140,7 @@ border-right: 1px solid #FFF;
 }
 
 .current-tocbar-item {
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 .playing-tocbar-item {  
@@ -151,7 +150,7 @@ border-right: 1px solid #FFF;
 
 #controls-timebar {
   position: absolute;
-  background: #e4e4e4;
+  background: #ebeff1;
   height: 10px;
   left: 0;
   right: 0;
@@ -174,7 +173,7 @@ border-right: 1px solid #FFF;
 
 .time {
   position: absolute;
-  left: 113px;
+  left: 42px;
   height: 27px;
   background: url( "../resources/controls/controls_time_arrowL.gif" ) no-repeat left top, url( "../resources/controls/controls_time_arrowR.gif" ) right top no-repeat;
   background-color: #f2f2f2;
@@ -205,18 +204,29 @@ border-right: 1px solid #FFF;
   line-height: 1em;
 }
 
+/* Navigation */
+
+#controls-nav-container {
+  position: absolute;
+  right: 104px;
+  width: 76px;
+  border-right: 1px solid #d5d6d5;
+  height: 41px;
+}
+
+
 
 /* Volume */
 
 #controls-volume-container {
   position: absolute;
-  right: 122px;
+  right: 52px;
   width: 38px;
 }
 
 #controls-volume {
   position: absolute;
-  background: #e4e4e4;
+  background: #ebeff1;
   height: 18px;
   left: 7px;
   right: 0;
@@ -284,12 +294,12 @@ border-right: 1px solid #FFF;
 }
 
 #controls-prev {
-  left: 35px;
+  left: 0px;
   background-position: center -41px !important;
 }
 
 #controls-next {
-  left: 70px;
+  left: 35px;
   background-position: center -67px !important;
 }
 
