--- a/public/css/embed.less
+++ b/public/css/embed.less
@@ -10,7 +10,7 @@
 @creditsLogoSize: 35px;
 @red: #CB3E21;
 @attributionZIndex: 3;
-@postRollZIndex: 2;
+@postRollZIndex: 4;
 @videoZIndex: 1;
 
 html {
@@ -61,7 +61,6 @@ body {
 .video {
   position: relative;
   width: 100%;
-  padding-bottom: 56.25%;
   height: 0;
 }
 
@@ -221,7 +220,7 @@ body {
   top: 0;
   right: 0;
   bottom: 42px;
-  width: 12em;
+  width: 30%;
   /*padding-left: 1.2em;
   padding-top: 1em;
   padding-bottom: 1em;*/
@@ -389,7 +388,7 @@ body {
 
 #post-roll,
 #share {
-  font-family: "Meta", "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Helvetica Neue", sans-serif;
   text-shadow: 1px 1px 0 rgba( 255, 255, 255, 0.4 );
   font-size: 1.5em;
   line-height: 1.4em;
@@ -402,15 +401,18 @@ body {
   .post-roll-inner, .share-inner {
     position: relative;
     padding: 10%;
-    font-family: "Meta", "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: "Helvetica Neue", sans-serif;
     text-shadow: 1px 1px 0 rgba( 255, 255, 255, 0.4 );
   }
 
-  .embed-project,
+  .embed-project {
+    padding-left: 160px;
+  }
+
   .share-options {
-    margin-left: 30%;
-    margin-top: 0;
+    margin-top: 20px;
     padding-left: 0;
+    clear: left;
   }
 
   .mozpopcorn {
@@ -423,28 +425,45 @@ body {
 
   .embed-logo {
     float: left;
-    background: url( "../resources/controls/postroll_logo.png" ) 0 0 no-repeat;
-    width: 30%;
+    background: url( "../resources/logo_openclassrooms_small.png" ) 0 0 no-repeat;
+    width: 135px;
     background-size: 100%;
-    max-width: 231px;
-    height: 388px;
-    margin-left: 5%;
-    margin-right: 5%;
-    margin-top: -5%;
+    height: 80px;
+    margin-left: -15px;
+    margin-top: 0;
   }
 
-  .embed-title {
-    font-size: 32px;
-    font-weight: 700;
+  .embed-h1 {
+    font-size: 1em;
     color: #676867;
     line-height: 1.4em;
-    max-width: 90%;
     overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    font-weight: 500;
+  }
+
+  .embed-h2 {
+    color: #676867;
+    font-size: 0.9em;
+    overflow: hidden;
+  }
+
+  .embed-h3 {
+    color: #676867;
+    font-size: 0.9em;
+    overflow: hidden;
   }
 
   .embed-author {
+    color: #676867;
+    font-size: 0.7em;
+    overflow: hidden;
+    margin-bottom: 1em;
+  }
+
+  .embed-credits {
+    padding-top: 20px;
+    padding-left: 0;
+    clear: left;
     margin-bottom: 1em;
     color: #676867;
     font-size: 20px;
@@ -452,6 +471,15 @@ body {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+  }
+
+  .credits-fieldset {
+    margin-top: 2em;
+
+    label {
+      font-weight: 500;
+    }
+
   }
 
 }
@@ -562,7 +590,7 @@ body {
   }
 
   #share-close:hover {
-    background: #1eb771;
+    background: #cb3e21;
   }
 
   .share-options input,
@@ -727,7 +755,7 @@ body {
     width: @creditsLogoSize - 10;
     height: @creditsLogoSize - 10;
     border-radius: @creditsLogoSize - 10;
-    background-position: -154px -2px;
+    background-position: -160px -2px;
   }
   .attribution-info {
     font-size: 16px;
@@ -735,11 +763,11 @@ body {
 }
 @media only screen and ( min-width: @large ) {
   .attribution-logo {
-    top: 8px;
+    top: 12px;
     right: 10px;
-    width: @creditsLogoSize;
-    height: @creditsLogoSize;
-    background-position: -124px 3px;
+    width: @creditsLogoSize - 10;
+    height: @creditsLogoSize - 10;
+    background-position: -160px -2px;
   }
   .attribution-info {
     font-size: 21.325px;
@@ -747,8 +775,8 @@ body {
 }
 @media only screen and ( min-width: @xlarge ) {
   .attribution-logo {
-    top: 18px;
-    right: 20px;
+    top: 16px;
+    right: 18px;
     width: @creditsLogoSize;
     height: @creditsLogoSize;
     background-position: -124px 3px;
@@ -764,23 +792,22 @@ body {
   #post-roll, #share {
 
     .embed-logo {
-      width: 20%;
-      background-size: 100%;
-      margin-left: 10%;
+      width: 100px;
       margin-top: 0;
-      height: 255px;
     }
 
     .embed-author {
       margin-bottom: 1em;
-      font-size: 18px;
+    }
+
+    .embed-project {
+      padding-left: 130px;
     }
 
     .post-roll-inner, .share-inner {
       left: 0;
       width: 80%;
-      padding: 5%;
-      top: 10%;
+      padding: 20px 40px;
     }
 
   }
@@ -805,19 +832,19 @@ body {
       }
 
       textarea {
-        height: 110px;
-        width: 70%;
+        height: 90px;
+        width: 65%;
         min-width: 0;
       }
 
       input {
-        width: 70%;
+        width: 65%;
         min-width: 0;
       }
 
       label {
         float: left;
-        width: 20%;
+        width: 128px;
         padding-top: 8px;
       }
     }
@@ -841,10 +868,92 @@ body {
 }
 
 
+@media only screen and ( max-width: @medium ) {
+
+  #post-roll, #share {
+
+    font-size: 16px;
+
+    .embed-logo {
+      width: 100px;
+      margin-top: 0;
+    }
+
+    .embed-author {
+      margin-bottom: 1em;
+    }
+
+    .embed-project {
+      padding-left: 130px;
+    }
+
+    .post-roll-inner, .share-inner {
+      left: 0;
+      width: 80%;
+      padding: 20px 40px;
+    }
+
+  }
+
+  #post-roll .post-roll-description {
+    font-size: 16px;
+    line-height: 1.2em;
+  }
+
+  #share {
+
+    .share-options {
+
+      input {
+        width: 70%;
+      }
+
+      fieldset {
+        padding: 3px 0;
+        min-width: 0;
+        width: 90%;
+      }
+
+      textarea {
+        height: 45px;
+        width: 55%;
+        min-width: 0;
+      }
+
+      input {
+        width: 55%;
+        min-width: 0;
+      }
+
+      label {
+        float: left;
+        width: 128px;
+        padding-top: 8px;
+      }
+    }
+
+    .share-size {
+      float: none;
+      margin-left: 97%;
+      width: 100%;
+
+      .size-options {
+        bottom: -35px;
+      }
+    }
+
+    .share-size  label {
+      float: left;
+      width: 20%;
+      padding-top: 2px;
+    }
+  }
+}
+
 @media only screen and ( max-width: @small ) {
   #post-roll, #share {
 
-    font-size: 13px;
+    font-size: 15px;
 
     .embed-title {
       margin-bottom: 3px;
@@ -853,10 +962,6 @@ body {
 
     .mozpopcorn {
       font-size: 12px;
-    }
-
-    .embed-author {
-      font-size: 14px;
     }
 
     .embed-logo {
@@ -884,13 +989,22 @@ body {
 
   #share {
 
-    .embed-logo {
-      display: none;
+    .share-inner {
+      padding: 20px;
     }
 
-    .embed-project, .share-options {
+    .embed-logo {
+      width: 15%;
       margin-left: 0;
+      margin-top: 0;
+      height: 80px;
     }
+
+    .embed-project {
+      margin-left: 0px;
+      padding-left: 102px;
+    }
+
 
     .share-options {
 
@@ -901,19 +1015,19 @@ body {
       }
 
       textarea {
-        height: 90px;
-        width: 70%;
+        height: 35px;
+        width: 55%;
         min-width: 0;
       }
 
       input {
-        width: 70%;
+        width: 55%;
         min-width: 0;
       }
 
       label {
         float: left;
-        width: 20%;
+        width: 100px;
         padding-top: 8px;
       }
 
@@ -922,6 +1036,11 @@ body {
         width: 100%;
         margin-top: 115px;
         margin-left: 20%;
+
+        .size-options {
+          bottom: 0;
+        }
+
       }
 
     }
