--- a/public/src/layouts/controls.html
+++ b/public/src/layouts/controls.html
@@ -1,8 +1,6 @@
 <div id="butter-controls">
   <div class="controls-left">
     <span id="controls-play" class="controls-btn controls-paused"></span>
-    <span id="controls-prev" class="controls-btn"></span>
-    <span id="controls-next" class="controls-btn"></span>
   </div>
   <div class="time">
     <span id="controls-currenttime">0:00</span>
@@ -19,6 +17,10 @@
       </div>
     </div>
   </div>
+  <div id="controls-nav-container">
+    <div id="controls-prev" class="controls-btn"></div>
+    <div id="controls-next" class="controls-btn"></div>
+  </div>
   <div id="controls-volume-container">
     <span id="controls-mute" class="controls-btn controls-unmuted"></span>
     <div id="controls-volume">
@@ -27,9 +29,7 @@
   </div>
   <div class="controls-right">
     <div id="controls-share" title="Share"></div>
-    <div id="controls-remix" title="Remix"></div>
-    <div id="controls-fullscreen" title="Fullscreen"></div>
-    <!--div id="controls-toc" title="Table of contents"></div-->
+    <!--div id="controls-remix" title="Remix"></div>
+    <div id="controls-fullscreen" title="Fullscreen"></div-->
   </div>
-  <!--a id="controls-logo" href="/" target="_blank" title="Popcorn Maker"></a-->
 </div>
