--- a/public/templates/basic/nestable.css
+++ b/public/templates/basic/nestable.css
@@ -27,13 +27,26 @@ padding: 0 5px;
 border: 1px solid #eee;
 }
 
-.dd-list { display: block; position: relative; margin: 0; padding: 0; list-style: none; }
+.dd-list:first-child {
+  maring-top: 0;
+}
+
+.dd-list { display: block; position: relative; margin: 0; padding: 0; list-style: none; margin-top: 20px; }
 .dd-list .dd-list { padding-left: 30px; }
 .dd-collapsed .dd-list { display: none; }
 
 .dd-item,
 .dd-empty,
-.dd-placeholder { display: block; position: relative; margin: 0; padding: 0; min-height: 20px; font-size: 13px; line-height: 20px; }
+.dd-placeholder {
+  display: block;
+  position: relative;
+  margin: 5px 0;
+  padding: 0;
+  margin-bottom: 40px;
+  min-height: 20px;
+  font-size: 13px;
+  line-height: 20px;  
+}
 
 .dd-handle { display: block; margin: 5px 0; padding: 5px 10px; color: #333; text-decoration: none; font-weight: bold; border: 1px solid #ccc;
     background: #fafafa;
@@ -119,14 +132,26 @@ border: 1px solid #eee;
  * Nestable Draggable Handles
  */
 
-.dd3-content { display: block; height: inherit; margin: 5px 0; margin-right: 130px; margin-left: 29px; padding: 5px 10px 5px 10px; color: #333; text-decoration: none; font-weight: bold; border: 1px solid #ccc;
+.dd3-content {
+    display: block;
+    height: inherit;
+    margin-bottom: 0;
+    margin-top: 5px;
+    margin-right: 29px;
+    margin-left: 29px;
+    padding: 5px 10px 5px 10px;
+    color: #333;
+    text-decoration: none;
+    font-weight: bold;
+    border: 1px solid #ccc;
     background: #fafafa;
     background: -webkit-linear-gradient(top, #fafafa 0%, #eee 100%);
-    background:    -moz-linear-gradient(top, #fafafa 0%, #eee 100%);
-    background:         linear-gradient(top, #fafafa 0%, #eee 100%);
-    -webkit-border-radius: 3px;
-            border-radius: 3px;
-    box-sizing: border-box; -moz-box-sizing: border-box;
+    background: -moz-linear-gradient(top, #fafafa 0%, #eee 100%);
+    background: linear-gradient(top, #fafafa 0%, #eee 100%);
+
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+
 }
 .dd3-content:hover { color: #2ea8e5; background: #fff; }
 
@@ -161,24 +186,24 @@ border: 1px solid #eee;
 
 .toc-item-time {
   position: absolute;
-  margin: 0;
-  top: 0;
-  width: 50px;
+  display: block;
+  width: 80px;
   height: 30px;
+  float: right;
   border: 1px solid #ddd;
-  border-right: 0;
+  border-top: 0;
   background: transparent;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
 }
 
 .toc-item-time-start {
-  right: 80px;
+  right: 110px;
 }
 
 
 .toc-item-time-end {
-  right: 30px;
+  right: 29px;
 
 }
 .toc-item-time input {
