--- a/public/css/embed.less
+++ b/public/css/embed.less
@@ -8,7 +8,7 @@
 }
 
 @creditsLogoSize: 35px;
-@red: #CB3E21;
+@red: rgba(233, 83, 37, .9);
 @attributionZIndex: 3;
 @postRollZIndex: 4;
 @videoZIndex: 1;
